added username authentication and formik